# NanoWrintingCenter

./: .gitignore  CMakeLists.txt  OriginalCMakeLists.txt  README.md  UI.txt  compat_fixes.h  darkmodel_colour_scheme.txt  gpt2.hpp  inference.hpp  inferenceCMakeLists.txt  inference_cli.cpp  inference_gpt2.cpp  inference_interface.cpp  mainwindow.cpp  mainwindow.h  nano.hpp  resources.qrc  test_inference.cpp  test_inference_cli.cpp
llmc/: dataloader.h  gpt21.txt  rand.h  test_tokenizer  test_tokenizer.cpp  tokenizer  tokenizer.cpp  tokenizer.h  tokenizer.hpp  unistd.h  utils.h
nn/: AttentionLayer.hpp  Block.hpp  CMakeLists.txt  Embedding.hpp  LayerNorm.hpp  Linear.hpp  LoRALinear.hpp  Loss.hpp  MLP.hpp  MatMul.hpp  Parameter.hpp  SoftMax.hpp  activation.hpp  fastfeedforward.cpp  fastfeedforward.hpp  fastfeedforward_notworking.hpp  fff.py  gpt.hpp  nn.hpp  testCMakeLists.txt  test_MLP_training.cpp  test_activation.cpp  test_fastfeedforward.cpp  test_fastfeedforward_training.cpp  test_parameter.cpp  test_sigmoid.cpp
optimizer/: CMakeLists.txt  optim.hpp
tensor/: fixed_point.hpp  tensor_types.hpp  tensor_util.hpp
